fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/FEC_Collection_Summary__c.object-meta.xml
<CustomObject>
    <label>Collection Summary</label>
    <nameField>
        <displayFormat>CSN - {0}</displayFormat>
        <label>Collection Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>