fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Address__c.field-meta.xml
<CustomField>
    <fullName>FEC_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>