fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Agent_ID__c</fullName>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>