fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>