fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Collection Summary</relationshipLabel>
    <relationshipName>Collection_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>