fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Communication_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Communication_Date__c</fullName>
    <label>Communication Date</label>
    <type>DateTime</type>
</CustomField>