fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Communication_Template__c.field-meta.xml
<CustomField>
    <fullName>FEC_Communication_Template__c</fullName>
    <label>Communication Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>