fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Current_Sub_Pool__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Sub_Pool__c</fullName>
    <label>Current Sub Pool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>