fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_NFU_Expired_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Expired_On__c</fullName>
    <label>NFU Expired On</label>
    <type>DateTime</type>
</CustomField>