fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_NFU_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Updated_By__c</fullName>
    <label>NFU Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>