fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>