fecdat/force-app/main/default/objects/FEC_Collection_Summary__c/fields/FEC_POS__c.field-meta.xml
<CustomField>
    <fullName>FEC_POS__c</fullName>
    <label>POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>